Use modern API for JsonParser and URL creation